--- a/visit.html
+++ b/visit.html
@@ -31,8 +31,8 @@
             </nav>
           </div>
     </header>
-    <main>
-        <section>
+    <main> 
+        <section class="visit">
             <h1>VISIT</h1>
             <section>
                 <h2>Location</h2>
@@ -40,7 +40,7 @@
                     0160 Oslo.</p>
                 <div class="mapouter">
                     <div class="gmap_canvas">
-                        <iframe width="600" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Kronprinsesse%20M%C3%A4rthas%20plass%201&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+                        <iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=Kronprinsesse%20M%C3%A4rthas%20plass%201&t=&z=15&ie=UTF8&iwloc=&output=embed" 
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                         <a href="https://putlocker-is.org">putlocker</a><br><style>.mapouter{position:relative;text-align:right;height:400px;width:600px;}</style>
                         <a href="https://www.embedgooglemap.net">how to embed a google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:600px;}</style>
@@ -57,15 +57,15 @@
                     group of 6 or more people, please contact us to arrange 
                     the tour.</p>
             </section>
-            <section>
+            <section class="hours">
                 <h2>Opening Hours</h2>
-                <p>Monday: Closed</p>
-                <p>Tuesday: 10:00 – 16:00</p>
-                <p>Wednesday: 10:00 – 16:00</p>
-                <p>Thursday: 10:00 – 16:00</p>
-                <p>Friday: 10:00 – 19:00</p>
-                <p>Saturday: 09:00 – 16:00</p>
-                <p>Sunday: 09:00 – 13:00</p>
+                <p><span class="day">Monday:</span> Closed</p>
+                <p><span class="day">Tuesday:</span> 10:00 – 16:00</p>
+                <p><span class="day">Wednesday:</span> 10:00 – 16:00</p>
+                <p><span class="day">Thursday:</span> 10:00 – 16:00</p>
+                <p><span class="day">Friday:</span> 10:00 – 19:00</p>
+                <p><span class="day">Saturday:</span> 09:00 – 16:00</p>
+                <p><span class="day">Sunday:</span> 09:00 – 13:00</p>
             </section>
             <section>
                 <h2>Accessibility</h2>
@@ -86,7 +86,7 @@
                     you’ve left the museum.</p>
             </section>
         </section>
-        <section>
+        <section class="contact">
             <h1>CONTACT</h1>
             <section>
                 <p>Want to make a booking for groups over 6 people, got
