Linked all the cta's to contact form

--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
         </div>
       </section>
       <div class= "contact-cta">
-        <a href="/visit.html" class="cta">CONTACT</a>
+        <a href="/visit.html#contact" class="cta">CONTACT</a>
     </div>
     </main>
     <footer></footer>
