--- a/visit.html
+++ b/visit.html
@@ -82,8 +82,8 @@
                     you’ve left the museum.</p>
             </section>
         </section>
-        <section class="contact">
-            <h1>CONTACT</h1>
+        <section class="contact-page">
+            <h1 id="contact">CONTACT</h1>
             <section>
                 <p>Want to make a booking for groups over 6 people, got
                     feedback or a question?</p>
