--- a/get_involed.html
+++ b/get_involed.html
@@ -70,7 +70,7 @@
                     it with the wider community.</p>
             </section>
             <div class= "contact-cta">
-                <a href="/visit.html" class="cta">CONTACT</a>
+                <a href="/visit.html#contact" class="cta">CONTACT</a>
             </div>
         </section>
     </main>
