--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         tickets for the first week of opening</p>
                 </div>
                 <div class="overlay-text cta">
-                    <a href="/visit.html" class="cta">TICKETS</a>
+                    <a href="/visit.html#contact" class="cta">TICKETS</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
             <div class="content-img contact">
                 <div class="overlay">
                     <div class="overlay-text">
-                        <a href="/visit.html">Contact</a>
+                        <a href="/visit.html#contact">Contact</a>
                     </div>
                 </div>
             </div>
