Added som epadding to content-overview on index/media

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </nav>
           </div>
     </header>
-    <main class= "index-main">
+    <main class="index-main">
         <div class="opening">
             <div class="overlay">
                 <div class="overlay-text">
-                    <h1>Welcome to our opening week</h1>
+                    <h1>Welcome to Our Opening Week</h1>
                     <p>Admission is free, but we recommend booking 
                         tickets for the first week of opening</p>
                 </div>
-                <div class="overlay-text cta">
+                <div>
                     <a href="/visit.html#contact" class="cta">TICKETS</a>
                 </div>
             </div>
