--- a/visit.html
+++ b/visit.html
@@ -86,8 +86,7 @@
             <h1 id="contact">CONTACT</h1>
             <section>
                 <p>Want to make a booking for groups over 6 people, got
-                    feedback or a question?</p>
-                <p>Get in touch here and we will answer within 24 hours: </p>
+                    feedback or a question?<span class="wrap-span">Get in touch here and we will answer within 24 hours:</span></p>
             </section>
             <form method="POST">
                 <div class="form-wrapper">
@@ -121,7 +120,6 @@
                 <div class="button">
                     <input type="submit" class="cta" value="send">
                 </div>
-                
             </form>
             <section class="contact-info">
                 <p class="bold">Phone:</p>
@@ -132,7 +130,7 @@
                 <p>contact@communitysciencemuseum.com</p>
             </section>
             <section class="contact-info">
-                <p class="bold">Social Media</p>
+                <p class="bold">Social Media:</p>
                 <i class="fab fa-facebook-square"></i><i class="fab fa-instagram-square"></i><i class="fab fa-snapchat-square"></i><i class="fab fa-twitter-square"></i>
             </section>
         </section>
