Footer done and now on all pages

--- a/visit.html
+++ b/visit.html
@@ -135,6 +135,31 @@
             </section>
         </section>
     </main>
-    
+    <footer>
+        <div class="flex-info">
+            <div>
+                <p><a href="/visit.html">Visit Us:</a></p>
+                <p><a href="https://goo.gl/maps/DaFGkXEkfNcytfaKA" target="_blank" class=address>Kronprinsesse Märthas plass 1, 
+                    0160 Oslo</a></p>
+            </div>
+            <div class="social-media">
+                <i class="fab fa-facebook-square"></i><i class="fab fa-instagram-square"></i><i class="fab fa-snapchat-square"></i><i class="fab fa-twitter-square"></i>
+            </div>
+        </div>
+        <section class="content-list">
+            <p><a href="/visit.html#contact">Contact</a></p>
+            <p><a href="/explore.html">Explore</a></p>
+            <p><a href="/events.html">Events</a></p>
+            <p><a href="/exhibitions.html">Exhibitions</a></p>
+            <p><a href="/get_involed.html">Get Involved</a></p>
+        </section>
+        <div class="sign-up">
+            <label for="singup">Sign up For Our Newsletter</label>
+            <input type="email" name="signup" id="signup">
+        </div>
+        <div>
+            <input type="submit" class="cta" value="send">
+        </div>
+    </footer>
 </body>
 </html>
