Canged content menu in footer to uppercase

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <footer>
         <div class="flex-info">
             <div>
-                <p><a href="/visit.html">Visit Us:</a></p>
+                <p><a href="/visit.html">VISIT US:</a></p>
                 <p><a href="https://goo.gl/maps/DaFGkXEkfNcytfaKA" target="_blank" class=address>Kronprinsesse Märthas plass 1, 
                     0160 Oslo</a></p>
             </div>
