Added the explore together section to explore

--- a/get_involed.html
+++ b/get_involed.html
@@ -32,7 +32,7 @@
           </div>
     </header>
     <main>
-        <h1>Get Involved</h1>
+        <h1>GET INVOLVED</h1>
         <section class="get-involved">
             <section class="get-invovled-info">
                 <h2>Support</h2>
