--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Community Science Museum">
+    <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all.">
     <script src="https://kit.fontawesome.com/97ab1123b3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/styles.css">
