Changed spelling error in label signup in footer on all pages

--- a/get_involed.html
+++ b/get_involed.html
@@ -93,7 +93,7 @@
             <p><a href="/get_involed.html">Get Involved</a></p>
         </section>
         <div class="sign-up">
-            <label for="singup">Sign up For Our Newsletter</label>
+            <label for="signup">Sign up For Our Newsletter</label>
             <input type="email" name="signup" id="signup" placeholder="Your Email...">
         </div>
         <div>
