Changed line-height between visit us and adress in footer

--- a/explore.html
+++ b/explore.html
@@ -118,7 +118,7 @@
     </main>
     <footer>
         <div class="flex-info">
-            <div>
+            <div class="visit-us">
                 <p><a href="/visit.html">VISIT US:</a></p>
                 <p><a href="https://goo.gl/maps/DaFGkXEkfNcytfaKA" target="_blank" class=address>Kronprinsesse Märthas plass 1, 
                     0160 Oslo</a></p>
