--- a/visit.html
+++ b/visit.html
@@ -45,7 +45,7 @@
             </section>
             <section>
                 <h2>Admission</h2>
-                <p>The entrance is free for all, and we welcome childran and adult of all ages.</p>
+                <p>The entrance is free for all, and we welcome children and adult of all ages.</p>
                 <p>There are guided tours of the museum that leave every 
                     hour. These tours are 70 NOK per person and include a 
                     handy printed guide of the museum. </p>
@@ -137,7 +137,7 @@
     </main>
     <footer>
         <div class="flex-info">
-            <div>
+            <div class="visit-us">
                 <p><a href="/visit.html">VISIT US:</a></p>
                 <p><a href="https://goo.gl/maps/DaFGkXEkfNcytfaKA" target="_blank" class=address>Kronprinsesse Märthas plass 1, 
                     0160 Oslo</a></p>
