Added wrap span to visit address in footer so it woulnd't expand all the way across

--- a/get_involed.html
+++ b/get_involed.html
@@ -79,7 +79,7 @@
             <div class="visit-us">
                 <p><a href="/visit.html">VISIT US:</a></p>
                 <p><a href="https://goo.gl/maps/DaFGkXEkfNcytfaKA" target="_blank" class=address>Kronprinsesse Märthas plass 1, 
-                    0160 Oslo</a></p>
+                    <span class="wrap-span">0160 Oslo</span></a></p>
             </div>
             <div class="social-media">
                 <i class="fab fa-facebook-square"></i><i class="fab fa-instagram-square"></i><i class="fab fa-snapchat-square"></i><i class="fab fa-twitter-square"></i>
