fixed Backslash in two img and deleted stray end tag

--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
       <h1>EVENTS</h1>
       <section class="events">
         <div class="events-info-box">
-          <img src="images\pexels-max-fischer-5212325.jpg" alt="Professor Sheila Widnall">
+          <img src="images/pexels-max-fischer-5212325.jpg" alt="Professor Sheila Widnall">
           <h2>Visiting Professor of Aeronautics</h2>
           <p>It is our pleasure to announce that Prof Sheila 
             Widnall from the Massachusetts Institute of 
@@ -48,7 +48,7 @@
             <p><i class="fas fa-user-alt"></i>Suitable for ages 13+</p>
         </div>
         <div class="events-info-box">
-          <img src="images\roberto-nickson-396152-cropped.jpg" alt="Main hall of museum at night">
+          <img src="images/roberto-nickson-396152-cropped.jpg" alt="Main hall of museum at night">
           <h2>Night at the Museum</h2>
           <p>Get your family together for an exciting night in 
             the museum as you sleep over beside dinosaurs 
@@ -57,7 +57,7 @@
             wonders of science.</p>
             <hr>
             <p><i class="fas fa-ticket-alt"></i>Free Admission</p>
-            <p><i class="fas fa-calendar-alt"></i>16th of February 2022</i></p>
+            <p><i class="fas fa-calendar-alt"></i>16th of February 2022</p>
             <p><i class="fas fa-user-alt"></i>Suitable for ages 3+</p>
         </div>
         <div class="events-info-box">
