--- a/exhibitions.html
+++ b/exhibitions.html
@@ -112,6 +112,7 @@
                     are able to use and control wind to create power.
                     </p>
                     <p><span class="temporary">* Temporary exhibition on from Jan - March 2022</span></p>
+                </div>
         </section>
     </main>
     <footer>
@@ -133,7 +134,7 @@
             <p><a href="/get_involed.html">Get Involved</a></p>
         </section>
         <div class="sign-up">
-            <label for="singup">Sign up For Our Newsletter</label>
+            <label for="signup">Sign up For Our Newsletter</label>
             <input type="email" name="signup" id="signup" placeholder="Your Email...">
         </div>
         <div>
