Confimration page complete

--- a/ticket-confirmation.html
+++ b/ticket-confirmation.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all.">
     <script src="https://kit.fontawesome.com/97ab1123b3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="/css/ticket-confirmation.css">
+    <link rel="stylesheet" href="css/ticket-confirmation.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Community Science Museum - Home</title>
 </head>
@@ -35,12 +35,12 @@
         <div class="thank-you">
             <i class="fas fa-check-circle"></i>
             <h2>Thank You for Pre-Ordering Tickets to Our Opening Week!</h2>
-            <p>Your order has been recived we'll 
+            <p>Your order has been recived and we'll 
               soon email you your ticket(s).</p>
             <section>
                 <p>If you like to plan your visit or get in touch with us, please view our <a href="/visit.html">Visit Section</a></p>
             </section>
-            <p>We look forward to to your visit</p>
+            <p>We look forward to welcoming you to our brand new museum</p>
           </div>
     </main>
     <footer>
