--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                             <p>For more than 6 tickets please contact us <a href="/visit.html#contact">here</a></p>
                         </section>
                     </div>
-                    <div class="button">
-                        <input type="submit" class="cta" value="send">
+                    <div>
+                        <a href="/ticket-confirmation.html" class="cta">SEND</a>
                     </div>
                 </form>
             </div>
