aded div class to cta

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <p>For more than 6 tickets please contact us <a href="/visit.html#contact">here</a></p>
                         </section>
                     </div>
-                    <div>
+                    <div class="button">
                         <a href="/ticket-confirmation.html" class="cta">SEND</a>
                     </div>
                 </form>
