Fixed the open div

--- a/index.html
+++ b/index.html
@@ -90,37 +90,37 @@
         </section>
         <div id="popup" class="ontop">
             <div class="popup">
-              <div class="content">
-                <div class="close-window">
-                  <a href="index.html">x</a>
+                <div>
+                    <div class="close-window">
+                        <a href="index.html">x</a>
+                    </div>
+                      <h3>Tickets for Opening Week</h3>
+                    <form method="POST">
+                        <div class="form-wrapper">
+                            <section>
+                                <label for="name">Full Name</label>
+                                <input type="text" name="fullname" id="name">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" name="phone" id="phone">
+                                <label for="subject">Number of Tickets</label>
+                                <select name="subject" id="subject">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                                <p>For more than 6 tickets please contact us <a href="/visit.html#contact">here</a></p>
+                            </section>
+                          </div>
+                          <div class="button">
+                              <a href="/ticket-confirmation.html" class="cta">SEND</a>
+                          </div>
+                      </form>
                 </div>
-                <h3>Tickets for Opening Week</h3>
-                <form method="POST">
-                    <div class="form-wrapper">
-                        <section>
-                            <label for="name">Full Name</label>
-                            <input type="text" name="fullname" id="name">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email">
-                            <label for="phone">Phone Number</label>
-                            <input type="tel" name="phone" id="phone">
-                            <label for="subject">Number of Tickets</label>
-                            <select name="subject" id="subject">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                            <p>For more than 6 tickets please contact us <a href="/visit.html#contact">here</a></p>
-                        </section>
-                    </div>
-                    <div class="button">
-                        <a href="/ticket-confirmation.html" class="cta">SEND</a>
-                    </div>
-                </form>
-              </div>
             </div>
         </div>
     </main>
