Moved map settings from HTML to CSS

--- a/visit.html
+++ b/visit.html
@@ -39,8 +39,7 @@
                 <p>The museum is located at Kronprinsesse Märthas plass 1, 
                     0160 Oslo.</p>
                 <div class="map">
-                    <iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=Kronprinsesse%20M%C3%A4rthas%20plass%201&t=&z=15&ie=UTF8&iwloc=&output=embed" 
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Kronprinsesse%20M%C3%A4rthas%20plass%201&t=&z=15&ie=UTF8&iwloc=&output=embed"></iframe>
                 </div>
             </section>
             <section>
@@ -55,13 +54,13 @@
             </section>
             <section class="hours">
                 <h2>Opening Hours</h2>
-                <p><span class="bold">Monday:</span> Closed</p>
-                <p><span class="bold">Tuesday:</span> 10:00 – 16:00</p>
-                <p><span class="bold">Wednesday:</span> 10:00 – 16:00</p>
-                <p><span class="bold">Thursday:</span> 10:00 – 16:00</p>
-                <p><span class="bold">Friday:</span> 10:00 – 19:00</p>
-                <p><span class="bold">Saturday:</span> 09:00 – 16:00</p>
-                <p><span class="bold">Sunday:</span> 09:00 – 13:00</p>
+                <p><span>Monday:</span> Closed</p>
+                <p><span>Tuesday:</span> 10:00 – 16:00</p>
+                <p><span>Wednesday:</span> 10:00 – 16:00</p>
+                <p><span>Thursday:</span> 10:00 – 16:00</p>
+                <p><span>Friday:</span> 10:00 – 19:00</p>
+                <p><span>Saturday:</span> 09:00 – 16:00</p>
+                <p><span>Sunday:</span> 09:00 – 13:00</p>
             </section>
             <section>
                 <h2>Accessibility</h2>
