--- a/ticket-confirmation.html
+++ b/ticket-confirmation.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Come join us at the Community Science Museum where we’re committed to making science accessible to all.">
+    <meta name="description" content="We look forward to welcoming you to our Community Science Museum where we are committed to making science accessible to all.">
     <script src="https://kit.fontawesome.com/97ab1123b3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/ticket-confirmation.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Community Science Museum - Home</title>
+    <title>Community Science Museum - Confirmation</title>
 </head>
 <body>
     <header>
