Changed title from h2 to h1

--- a/ticket-confirmation.html
+++ b/ticket-confirmation.html
@@ -34,7 +34,7 @@
     <main>
         <div class="thank-you">
             <i class="fas fa-check-circle"></i>
-            <h2>Thank You for Pre-Ordering Tickets to Our Opening Week!</h2>
+            <h2>Thank You for Pre-Ordering Tickets</h2>
             <p>Your order has been recived and we'll 
               soon email you your ticket(s).</p>
             <section>
