Changed the get in touch text

--- a/visit.html
+++ b/visit.html
@@ -85,7 +85,7 @@
             <h2 id="contact">CONTACT</h2>
             <section>
                 <p>Want to make a booking for groups over 6 people, got
-                    feedback or a question?<span class="wrap-span">Get in touch here and we will answer within 24 hours:</span></p>
+                    feedback or a question?<span class="wrap-span">Get in touch here and we will do our best to answer within 24 hours:</span></p>
             </section>
             <form method="POST">
                 <div class="form-wrapper">
